--- a/templates/activelearning.html
+++ b/templates/activelearning.html
@@ -45,8 +45,11 @@
     </div>
       <h6>Document Number: {{document_id}}</h6>
       <div id="text" class="active-label">{{text}}</div>
-      <div> Model Suggestion: <span style="font-size: larger; font-weight: 500;">{{pred}}</span></div>
-    
+      <!-- <div> Model Suggestion: <span style="font-size: larger; font-weight: 500;">{{pred}}</span></div> -->
+      <!-- <div> Model Suggestion: <span style="font-size: larger; font-weight: 500;">{{pred}}</span></div> -->
+      {% for suggestion in pred %}
+        <div> Top Model Suggestion {{ loop.index }}: <span style="font-size: larger; font-weight: 500;">{{suggestion}}</span></div>
+      {% endfor %}
       <form method="POST">
         <div name="responses">
           <select class="suggestion" name="suggestion">
