updated template results

--- a/templates/activelearning.html
+++ b/templates/activelearning.html
@@ -20,6 +20,12 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <link
+          href="https://cdnjs.cloudflare.com/ajax/libs/intro.js/7.0.1/introjs.min.css"
+          rel="stylesheet"
+        />
+    
+
     <title>Document</title>
   </head>
 
@@ -28,12 +34,18 @@
       <a class="active" href="{{url_for('home_page', name=session['name'])}}"
         >Home</a
       >
-      <a href="{{url_for('active_check', name=session['name'])}}">Documents</a>
-      {% if doc_len != 1 %}
+      <a id="documents" href="{{url_for('active_check', name=session['name'])}}">Documents</a>
+      {% if docs_len != 0 %}
       <a href="{{url_for('labeled_list', name=session['name'])}}"> Completed </a>
       {% endif %}
-      <a href="{{url_for('finish')}}"> Finish</a>
-      <a class="logout" href="{{url_for ('login')}}"> Logout</a>
+      <a id="demo" href="#">Demo</a>
+      <div id="sessionTimer">
+        <!-- <label id="minutes">00</label>
+        <label id="colon">:</label>
+        <label id="seconds">00</label> -->
+      </div>
+      
+      <a class="logout" id="finish" href="{{url_for('finish')}}"> Finish</a>
     </nav>
     <h1 class="heading" style="margin-top: 2px;">LABEL THE DOCUMENT</h1>
     
@@ -46,12 +58,11 @@
       <h6>Document Number: {{document_id}}</h6>
       <div id="text" class="active-label">{{text}}</div>
       <!-- <div> Model Suggestion: <span style="font-size: larger; font-weight: 500;">{{pred}}</span></div> -->
-      <!-- <div> Model Suggestion: <span style="font-size: larger; font-weight: 500;">{{pred}}</span></div> -->
       {% for suggestion in pred %}
         <div> Top Model Suggestion {{ loop.index }}: <span style="font-size: larger; font-weight: 500;">{{suggestion}}</span></div>
       {% endfor %}
       <form method="POST">
-        <div name="responses">
+        <div id="model_sugges" name="responses">
           <select class="suggestion" name="suggestion">
             <option></option>
             {% for c in predictions %}
@@ -69,7 +80,7 @@
         </div>
           </form>
       <!-- <div> Type a label or select one from the dropdown</div> -->
-      {% if docs_len != 1 %}
+          {% if docs_len != 0 %}
           <div> <h6> completed {{docs_len}} out of {{total}} </h6></div>
 
           {% else %}
@@ -79,6 +90,9 @@
     </main>
 
     <script src="{{ url_for('static', filename='activeLearning.js') }}"></script>
-    <script src = "{{ url_for('static', filename='nistprep.js') }}"></script>
+    <script src = "{{ url_for('static', filename='nistprepactive.js') }}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/intro.js/7.0.1/intro.min.js"></script>
+    <script src = "{{ url_for('static', filename='act_lab.js') }}"></script>
+    <script src = "{{ url_for('static', filename='track_labels.js') }}"></script>
   </body>
 </html>
