--- a/templates/completed.html
+++ b/templates/completed.html
@@ -23,8 +23,14 @@
         >Home</a
       >
       <a href="{{url_for('active_check', name=session['name'])}}">Documents</a>
-      <a href="{{url_for('finish')}}"> Finish</a>
-      <a class="logout" href="{{url_for ('login')}}"> Logout</a>
+      <!-- <a href="{{url_for('finish')}}"> Finish</a> -->
+      <a id="demo" href="#">Demo</a>
+      <div id="sessionTimer">
+        <!-- <label id="minutes">00</label>
+        <label id="colon">:</label>
+        <label id="seconds">00</label> -->
+      </div>
+      <a class="logout" id="finish" href="{{url_for ('finish')}}"> Finish</a>
     </nav>
     <main>
       <h1 class="heading">LABELED DOCUMENTS </h1>
@@ -103,5 +109,6 @@
     </main>
 
     <script src="{{ url_for('static', filename='label.js') }}"></script>
+    <script src = "{{ url_for('static', filename='track_labels.js') }}"></script>
   </body>
 </html>
