--- a/templates/label.html
+++ b/templates/label.html
@@ -50,5 +50,6 @@
     </div>
 </div>
 <script src = "{{ url_for('static', filename='nistprep.js') }}"></script>
+<script src = "{{ url_for('static', filename='track_labels.js') }}"></script>
     </body>
 </html>
