--- a/templates/viewlabeled.html
+++ b/templates/viewlabeled.html
@@ -30,17 +30,29 @@
       >
       <a href="{{url_for('active_check', name=session['name'])}}">Documents</a>
       <a href="{{url_for('labeled_list', name=session['name'])}}"> Completed</a>
-      <a href="{{url_for('finish')}}"> Finish</a>
-      <a class="logout" href="{{url_for ('login')}}"> Logout</a>
+      <!-- <a href="{{url_for('finish')}}"> Finish</a> -->
+      <a id="demo" href="#">Demo</a>
+      <div id="sessionTimer">
+        <!-- <label id="minutes">00</label>
+        <label id="colon">:</label>
+        <label id="seconds">00</label> -->
+      </div>
+      <a class="logout" id="finish" href="{{url_for ('login')}}"> Logout</a>
     </nav>
     <h1 class="heading" style="margin-top: 2px;">LABEL THE DOCUMENT</h1>
     <main class="mains">
       <h6>Document Number: {{document_id}}</h6>
       <div id="text" class="active-label">{{text}}</div>
       <br>
-      <p style="text-align: center;"> <h5>Response:  {{response}}</h5></p>
+      <div >
+        <div style="display: inline-block;"> <h5>Response: {{response}}</h5></div>
+        <div style="float: right;"> <a href="{{url_for('edit_labels', name=session['name'], document_id=document_id)}}"> edit response</a></div>
+        
+      </div>
+      
     </main>
 
     <script src="{{ url_for('static', filename='activeLearning.js') }}"></script>
+    <script src = "{{ url_for('static', filename='track_labels.js') }}"></script>
   </body>
 </html>
