--- a/templates/active_list.html
+++ b/templates/active_list.html
@@ -14,28 +14,42 @@
       type="text/css"
       href="{{ url_for('static', filename='css/active-list.css') }}"
     />
+    <link
+          href="https://cdnjs.cloudflare.com/ajax/libs/intro.js/7.0.1/introjs.min.css"
+          rel="stylesheet"
+        />
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
     <title>Document</title>
   </head>
 
   <body>
     <nav class="topnav">
-      <a class="active" href="{{url_for('home_page', name=session['name'])}}"
-        >Home</a
-      >
-      <a href="{{url_for('active_check', name=session['name'])}}">Documents</a>
-      {% if docs_len != 1 %}
+      <a  id="home" class="active" href="{{url_for('home_page', name=session['name'])}}"
+        >Home</a>
+        
+      <a id="documents" href="{{url_for('active_check', name=session['name'])}}">Documents</a>
+      {% if docs_len != 0 %}
+      <!-- <p>Completed</p> -->
       <a href="{{url_for('labeled_list', name=session['name'])}}"> Completed </a>
       {% endif %}
-      <a href="{{url_for('finish')}}"> Finish</a>
-      <a class="logout" href="{{url_for ('login')}}"> Logout</a>
+      <a id="demo" href="#">Demo</a>
+      <div id="sessionTimer">
+        <!-- <label id="minutes">00</label>
+        <label id="colon">:</label>
+        <label id="seconds">00</label> -->
+      </div>
+
+      
+
+      <a class="logout" id="finish" href="{{url_for('finish')}}"> Finish</a>
+      
     </nav>
     <main>
       <h1 class="heading">SELECT DOCUMENTS TO LABEL </h1>
       <br />
       <div> Recommended Document</div>
-      <div class="table-wrapper active-list-table" style="height:4rem ; overflow:auto">
-      <table>
+      <div  class="table-wrapper active-list-table" style="height:4rem ; overflow:auto">
+      <table id="recommended">
         <thead>
           <tr>
             <th>Number</th>
@@ -58,7 +72,7 @@
     </div>
 
       <br>
-      <div class="table-wrapper active-list-table">
+      <div id="act_lis" class="table-wrapper active-list-table">
         <table>
           <thead>
             <tr>
@@ -103,5 +117,9 @@
     </main>
 
     <script src="{{ url_for('static', filename='label.js') }}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/intro.js/7.0.1/intro.min.js"></script>
+    <script src = "{{ url_for('static', filename='active_listt.js') }}"></script>
+    <script src = "{{ url_for('static', filename='active_listt.js') }}"></script>
+    <script src = "{{ url_for('static', filename='track_labels.js') }}"></script>
   </body>
 </html>
